add env file, and callback to register

--- a/views/register.jade
+++ b/views/register.jade
@@ -23,5 +23,6 @@ block content
 				label(for='passwordRepeat') Confirm password
 				input#passwordRepeat.form-control(name='passwordRepeat' type='password', placeholder='Repeat password', data-match='#password' data-match-error='Ops, the passwords do not match' required='')
 				div(class='help-block with-errors')
+			input(name='callback', type='hidden', value=callback)
 			div.form-group
 				button.btn.btn-lg.btn-primary.btn-block(type='submit', value='register') Registrer
