add resend possibility

--- a/views/activation.jade
+++ b/views/activation.jade
@@ -3,3 +3,5 @@ extend layout
 block content
 	.container
 		!= messages()
+	a(href='https://game.maginationgame.com' class="col-md-1 col-md-offset-5") Go to games
+	a(href='https://community.maginationgame.com' class="col-md-2") Go to community
