style for usages of community

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,11 @@ html
 			include css/bootstrap.min.css
 			include css/styles.css
 	body
+		nav.navbar.navbar-default
+			.container-fluid
+				a.navbar-brand(href='https://www.magniationgame.com') Magination
+				a.navbar-brand(href='https://community.magniationgame.com') Community
+				a.navbar-brand(href='https://game.magniationgame.com') Game
 		block content
 		script(src='/js/jquery.js')
 		script(src='/js/validator.min.js')
