--- a/views/activation.jade
+++ b/views/activation.jade
@@ -3,5 +3,9 @@ extend layout
 block content
 	.container
 		!= messages()
-	a(href='https://game.maginationgame.com' class="col-md-1 col-md-offset-5") Go to games
-	a(href='https://community.maginationgame.com' class="col-md-2") Go to community
+		form(name="logIn", action="https://community.maginationgame.com/login", method="get", data-toggle="validator", role="form")
+			div.form-group
+				button.btn.btn-lg.btn-primary.btn-block(type='submit', value='logIn') Log in to the community
+		form(name="resendEmail", action="/registered", method="get", data-toggle="validator", role="form")
+			div.form-group
+				button.btn.btn-lg.btn-primary.btn-block(type='submit', value='resend') Send new email
