--- a/views/login.jade
+++ b/views/login.jade
@@ -4,7 +4,7 @@ block content
 	.container
 		!= messages()
 		form(action="/login" method="post")
-			h2.form-signin-heading Please sign in
+			h2.form-signin-heading Please sign in to Magination
 			div.form-group
 				label.sr-only(for='inputUsername') Username
 				input#inputUsername.form-control(type='text', name='username', placeholder='username', required='', autofocus='')
