Change password length to 7

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,9 +8,9 @@ html
 	body
 		nav.navbar.navbar-default
 			.container-fluid
-				a.navbar-brand(href='https://www.magniationgame.com') Magination
-				a.navbar-brand(href='https://community.magniationgame.com') Community
-				a.navbar-brand(href='https://game.magniationgame.com') Game
+				a.navbar-brand(href='https://www.maginationgame.com') Magination
+				a.navbar-brand(href='https://community.maginationgame.com') Community
+				a.navbar-brand(href='https://game.maginationgame.com') Game
 		block content
 		script(src='/js/jquery.js')
 		script(src='/js/validator.min.js')
