Translate to english

--- a/views/register.jade
+++ b/views/register.jade
@@ -16,12 +16,12 @@ block content
 				input#email.form-control(name='email', type='email', required='')
 				div(class='help-block with-errors')
 			div.form-group
-				label(for='password') Passord
-				input#password.form-control(name='password' type='password', placeholder='Passord', data-minlength="7", required='')
+				label(for='password') Password
+				input#password.form-control(name='password' type='password', placeholder='Password', data-minlength="7", required='')
 				div(class='help-block with-errors')
 			div.form-group
 				label(for='passwordRepeat') Confirm password
 				input#passwordRepeat.form-control(name='passwordRepeat' type='password', placeholder='Repeat password', data-match='#password' data-match-error='Ops, the passwords do not match' required='')
 				div(class='help-block with-errors')
 			div.form-group
-				button.btn.btn-lg.btn-primary.btn-block(type='submit', value='register') Registrer
+				button.btn.btn-lg.btn-primary.btn-block(type='submit', value='register') Register
