--- a/views/login.jade
+++ b/views/login.jade
@@ -7,7 +7,7 @@ block content
 			h2.form-signin-heading Please sign in to Magination
 			div.form-group
 				label.sr-only(for='inputUsername') Username
-				input#inputUsername.form-control(type='text', name='username', placeholder='username', required='', autofocus='')
+				input#inputUsername.form-control(type='text', name='username', placeholder='Username', required='', autofocus='')
 			div.form-group
 				label.sr-only(for='inputPassword') Password
 				input#inputPassword.form-control(type='password', name='password', placeholder='Password', data-minlength="6", required='')
