--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ html
 	head
 		title OAuth2orize Example
 		meta(charset="utf-8")
+		link(rel='icon' href='/img/favicon-large.png')
 		style
 			include css/bootstrap.min.css
 			include css/styles.css
