--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,6 @@
 html
 	head
-		title OAuth2orize Example
+		title Login | Magination
 		meta(charset="utf-8")
 		link(rel='icon' href='/img/favicon-large.png')
 		style
