--- a/views/register.jade
+++ b/views/register.jade
@@ -4,7 +4,7 @@ block content
 	.container
 		!= messages()
 		form(name="register", action="/register", method="post", data-toggle="validator", role="form")
-			h2.form-signing-heading Register
+			h2.form-signing-heading Register user
 			div.form-group
 				label(for='username', style='white-space:pre;')
 					| Username
